semantic/src/test_cases/bad/test9.cl
(* Names of formal parameters of methods repeat *)

class A {
    f(x : Int, x : Int) : Int {
        0
    };
};

class B {
    f(x : Int, y : Bool, x : String) : Bool {
        true
    };
};

class Main {
    main() : Int {
        0
    };
};
